se añade diseño para las vistas

--- a/pagina/index.html
+++ b/pagina/index.html
@@ -11,12 +11,9 @@
 <!-- justo dentro del body -->
 <div class="container-fluid">
   <div class="row flex-nowrap">
-    <!-- Sidebar -->
     <div id="sidebar-container"></div>
-
-    <!-- Contenido principal -->
-    <div class="col vista">
-      Content area...asbdbasjdsjcs 
+    <div class="col py-3">
+      ...
     </div>
   </div>
 </div>
