--- a/pagina/sidebar/sidebar.html
+++ b/pagina/sidebar/sidebar.html
@@ -1,6 +1,5 @@
-<div
-  class="col-auto col-md-3 col-xl-2 bg-dark text-white min-vh-100 sidebar p-3"
->
+<div class="bg-dark text-white min-vh-100 sidebar p-3">
+
   <div class="d-flex flex-column h-100">
     <div class="mb-4 text-center">
       <h4 class="fw-bold">Documental</h4>
@@ -33,7 +32,7 @@
         >
       </li>
       <li>
-        <a href="../views/programaacademico.html" class="nav-link text-white"
+        <a href="../views/programa_academico.html" class="nav-link text-white"
           ><i class="bi bi-book me-2"></i> Programa Académico</a
         >
       </li>
@@ -55,22 +54,22 @@
         >
       </li>
       <li>
-        <a href="../views/proyectoasesor.html" class="nav-link text-white"
+        <a href="../views/proyecto_asesor.html" class="nav-link text-white"
           ><i class="bi bi-people me-2"></i> Proyecto - Asesor</a
         >
       </li>
       <li>
-        <a href="../views/proyectoestudiante.html" class="nav-link text-white"
+        <a href="../views/proyecto_estudiante.html" class="nav-link text-white"
           ><i class="bi bi-person-lines-fill me-2"></i> Proyecto - Estudiante</a
         >
       </li>
       <li>
-        <a href="../views/faseproyecto.html" class="nav-link text-white"
+        <a href="../views/fase_proyecto.html" class="nav-link text-white"
           ><i class="bi bi-layers-half me-2"></i> Fase Proyecto</a
         >
       </li>
       <li>
-        <a href="../views/historialdocumento.html" class="nav-link text-white"
+        <a href="../views/historial_documento.html" class="nav-link text-white"
           ><i class="bi bi-archive me-2"></i> Historial Documento</a
         >
       </li>
