--- a/pagina/index.html
+++ b/pagina/index.html
@@ -1,31 +1,38 @@
 <!doctype html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Bootstrap demo</title>
-    <link rel="stylesheet" href="style.css">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-  </head>
-  <body>
-<!-- justo dentro del body -->
-<div class="container-fluid">
-  <div class="row flex-nowrap">
-    <div id="sidebar-container"></div>
-    <div class="col py-3">
-      ...
+
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>Bootstrap demo</title>
+  <link rel="stylesheet" href="../style.css" />
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" />
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css" rel="stylesheet" />
+</head>
+
+<body>
+  <div class="container-fluid">
+    <div class="row flex-nowrap">
+      <div id="sidebar-container" class="col-auto col-md-3 col-xl-2 px-sm-2 px-0"></div>
+      <div class="col py-3">
+        <h1>vistas</h1>
+      </div>
     </div>
   </div>
-</div>
 
 
-</div>
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js" integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy" crossorigin="anonymous"></script>
-  </body>
+  </div>
+  <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
+    integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r"
+    crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js"
+    integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy"
+    crossorigin="anonymous"></script>
+</body>
+
 </html>
 <script>
-  fetch("./sidebar/sidebar.html")
+  fetch("./components/sidebar.html")
     .then(res => res.text())
     .then(html => {
       document.getElementById("sidebar-container").innerHTML = html;
@@ -33,9 +40,16 @@
 </script>
 
 <style>
-.sidebar-container{
-  background-color: red;
-  height: 100vh;
-  width: 100%;
-}
+  #sidebar-container {
+    margin-top: 1%;
+    height: 95vh;
+    overflow-y: hidden;
+    border-radius: 25px;
+    width: auto;
+  }
+  .container-fluid {
+    background-color: #d9d7ff;
+    height: 100vh;
+    overflow: hidden;
+  }
 </style>
